--- a/style.css
+++ b/style.css
@@ -75,8 +75,13 @@
         background-color: #4a4a4a;
     }
 
-    .container::before { top: 0; }
-    .container::after { bottom: 0; }
+    .container::before {
+        top: 0;
+    }
+
+    .container::after {
+        bottom: 0;
+    }
 
     ul {
         display: flex;
@@ -306,15 +311,164 @@ footer {
 }
 
 .footer_wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px 3%;
     background-color: #f5f3f3;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer_links {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
+    justify-content: center;
 
     .col {
-        background-color: red;
+
+        h3 {
+            font-size: 16px;
+            font-weight: bold;
+            padding: 0px 0px 12px;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+
+            a {
+                color: black;
+                text-decoration: none;
+
+                span {
+                    font-size: 14px;
+                    font-weight: 300;
+                }
+            }
+        }
+
+        li {
+
+            font-size: 14px;
+            margin-bottom: 10px;
+            cursor: pointer;
+        }
     }
+
+    .col_footer_pay-sec {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .footer_payments ol {
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        zoom: 0.8;
+        filter: grayscale(1);
+        max-width: 296px;
+    }
+
+    .footer_payments li {
+        width: 48px;
+        height: 34px;
+        background-image: url('./icons/payment.62223b1.png');
+        background-size: auto 100%;
+    }
+
+    .footer_payments .visa {
+        background-position: 0 0;
+    }
+
+    .footer_payments .master {
+        background-position: -48px 0;
+    }
+
+    .footer_payments .amex {
+        background-position: -144px 0;
+    }
+
+    .footer_payments .hipercard {
+        background-position: -192px 0;
+    }
+
+    .footer_payments .elo {
+        background-position: -240px 0;
+    }
+
+    .footer_payments .pix {
+        background-position: -336px 0;
+    }
+
+    .footer_security {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        ol {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            zoom: 0.8;
+            filter: grayscale(1);
+        }
+
+        span {
+            font-size: 14px;
+            padding-bottom: 15px;
+        }
+    }
+
+    .footer_socials {
+        nav {
+            display: flex;
+            gap: 10px;
+
+            .fc-icon {
+                height: 18px;
+                width: 13px;
+            }
+
+            .inst-icon {
+                height: 18px;
+                width: 24px;
+            }
+        }
+    }
+}
+
+.copy_wrapper {
+    align-items: center;
+    justify-content: center;
+    padding: 80px 40px;
+    background-color: #f5f3f3;
+}
+
+.copy {
+    height: 30px;
+    display: flex;
+    position: relative;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+
+    p {
+        font-size: 11px;
+        font-weight: 300;
+        text-align: center;
+    }
+
+    img {
+        width: 98px;
+        height: 19px;
+    }
+}
+
+.logo_convertr {
+    position: absolute;
+    right: 150px;
 }
