--- a/style.css
+++ b/style.css
@@ -196,6 +196,405 @@
 }
 
 
+/*MAIN*/
+/*SLIDER*/
+.banner_slider {
+    position: relative;
+    width: 100%;
+    height: 760px;
+    overflow: hidden;
+}
+
+.slide {
+    position: absolute;
+    width: 100%;
+    height: 760px;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.slide.active {
+    opacity: 1;
+}
+
+.arrow {
+    position: absolute;
+    top: 90%;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    background-size: contain;
+    transition: opacity 0.3s;
+    background-repeat: no-repeat;
+}
+
+.arrow.left {
+    left: 40%;
+    background-image: url(./icons/next-left.png);
+    background-position: center;
+}
+
+.arrow.right {
+    right: 40%;
+    background-image: url(./icons/next-right.png);
+    background-position: center;
+}
+
+.navigation {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 20px;
+}
+
+.bar {
+    width: 180px;
+    height: 2px;
+    background-image: url('./icons/barra-hero1.png');
+    cursor: pointer;
+    opacity: 0.5;
+    transition: opacity 0.3s;
+}
+
+.bar.active {
+    background-image: none;
+    background-color: white;
+}
+
+.logos {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    height: 70px;
+
+    .logo_emporio {
+        width: 120px;
+    }
+}
+
+.slide_content1 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 40%;
+    left: 5%;
+
+    h2 {
+        font-size: 40px;
+        font-weight: 700;
+        text-align: center;
+        color: white;
+    }
+
+    span {
+        font-size: 16px;
+        font-weight: 300;
+        text-align: center;
+        color: white;
+    }
+}
+
+.buy-button {
+    height: 50px;
+    width: 180px;
+    color: white;
+    font-weight: bold;
+    background-image: url(./icons/botão-hero-1.png);
+    border: none;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease;
+}
+
+.buy-button:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+}
+
+/*COMPRE POR CATEGORIA*/
+
+.buy_category {
+    width: 100%;
+    margin-left: 50px;
+
+    h2 {
+        margin-top: 80px;
+        margin-bottom: 35px;
+    }
+}
+
+.top_container {
+    position: relative;
+
+    .category_arrow {
+        position: absolute;
+        top: 70%;
+        right: 20%;
+        border: none;
+        padding: 5px;
+        cursor: pointer;
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 25px;
+        height: 25px;
+    }
+
+    .category_arrow.left {
+        left: 75%;
+        background-image: url(./icons/arrow-left.png);
+        background-position: center;
+    }
+
+    .category_arrow.right {
+        right: 20%;
+        background-image: url(./icons/arrow.png);
+        background-position: center;
+    }
+}
+
+.buy_category_wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+    gap: 45px;
+    transition: transform 0.5s ease;
+    overflow: hidden;
+    width: 100vw;
+}
+
+.buy_category_content_image {
+    position: relative;
+    height: 600px;
+    overflow: hidden;
+    z-index: 2;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
+
+    button {
+        position: absolute;
+        bottom: 0%;
+        right: 0%;
+        height: 50px;
+        padding: 10px 15px;
+        color: white;
+        font-weight: bold;
+        background-color: black;
+        border: none;
+        background: radial-gradient(at bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.801));
+    }
+}
+
+.buy_category_content_title {
+    margin-top: 35px;
+    margin-left: 10px;
+    text-decoration: underline;
+}
+
+.brand_wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin: 100px;
+}
+
+.brand_content img {
+    filter: grayscale(1);
+    transition: filter 0.3s;
+    opacity: .6;
+}
+
+/*Carousel recomendados*/
+
+.slider {
+
+    position: relative;
+    padding-bottom: 55px;
+    margin-top: 55px;
+
+    h2 {
+        margin: 80px 0px 35px;
+        padding-left: 40px;
+    }
+}
+
+.slider_arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 24px;
+    opacity: 0.7;
+    z-index: 10;
+}
+
+.left_arrow {
+    left: 10px;
+}
+
+.right_arrow {
+    right: 10px;
+}
+
+.slider_arrow:hover {
+    opacity: 1;
+}
+
+.slider_wrapper {
+    display: flex;
+    padding-left: 40px;
+    gap: 20px;
+    overflow-x: auto; /*ativa rolagem horizontal*/
+    scroll-behavior: smooth; 
+    flex-wrap: nowrap;
+}
+
+.slider_wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+.product_container {
+    flex: 0 0 auto;   
+}
+
+.product {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    overflow: hidden;
+}
+
+.product_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease-in-out;
+}
+
+.product_overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40%;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+.product_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.buy_button {
+    cursor: pointer;
+    padding: 10px 20px;
+    font-size: 14px;
+    margin-top: 10px;
+    background-color: black;
+    border: none;
+    color: white;
+    background: radial-gradient(at bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.801));
+    transition: transform 0.3s ease;
+}
+
+.buy_button:hover {
+    transform: scale(1.1);  
+}
+
+.size_options {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding: 15px 0px 10px 0px;
+}
+
+.size_options span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.product:hover .product_overlay {
+    opacity: 1;
+    transform: translateY(0);
+
+}
+
+.product:hover .product_image {
+    transform: scale(1.05);
+}
+
+.product_heart {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    cursor: pointer;
+    transform: scale(0.75);
+}
+
+.heart_path {
+    fill: transparent;
+    stroke: black;
+    stroke-width: 1;
+    transition: fill 0.3s ease, stroke 0.3s ease;
+}
+
+.product_heart:hover .heart_path {
+    fill: black;
+    stroke: black;
+}
+
+.product:hover .product_overlay {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.product:hover .product_image {
+    transform: scale(1.05);
+}
+
+.product_name {
+    margin: 10px 0px;
+}
+
+.green {
+    color: rgb(11, 206, 11);
+}
+
+/*Mais vendidos*/
+
+.pinkish {
+    background-color: #f5f3f3;
+}
+
+/*MAIN*/
 
 footer {
     width: 100%;
@@ -218,6 +617,7 @@ footer {
 .about_content {
     p {
         text-align: center;
+        padding: 0, 40px;
     }
 }
 
@@ -277,6 +677,7 @@ footer {
         display: flex;
         align-items: center;
         justify-content: center;
+        max-height: 100%;
     }
 
     .input_checkbox:checked::before {
@@ -470,5 +871,5 @@ footer {
 
 .logo_convertr {
     position: absolute;
-    right: 150px;
+    right: 250px;
 }
