--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 * {
     font-family: "Montserrat", sans-serif;
-    overflow-x: hidden;
     box-sizing: border-box;
+    list-style: none;
     margin: 0;
     padding: 0;
+}
+
+main {
+    overflow-x: hidden;
 }
 
 .header {
@@ -194,6 +198,54 @@
     background-color: white;
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
+
+.dropdown .content {
+    display: none;
+    position: absolute;
+    left: 0;
+    width: 100vw;
+    background-color: #f6f6f6;
+    padding: 10px 0;
+    z-index: 1;
+}
+
+/* Links dentro do dropdown */
+.dropdown .content span {
+    color: black;
+    text-decoration: none;
+    font-size: 14px;
+    padding: 5px 50px;
+    display: block;
+    cursor: pointer;
+}
+
+/* Exibe o conteúdo do dropdown quando o item é hover */
+.dropdown:hover .content {
+    display: block;
+    background-color: #f6f6f6;
+    padding: 10px 0;
+    width: 100%;
+    z-index: 1;
+}
+
+/* Estilo do grid dentro do dropdown */
+.grid_container {
+    display: grid;
+    grid-template-columns: repeat(6, minmax(100px, 1fr));
+    max-width: 70%;
+    margin: 0 auto;
+    padding: 50px 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Estilo das imagens dentro do grid */
+.grid_container img {
+    width: 100%;
+    height: auto;
+    background-size: cover;
+}
+
 
 
 /*MAIN*/
@@ -455,7 +507,6 @@
     padding-left: 40px;
     gap: 20px;
     overflow-x: auto;
-    /*ativa rolagem horizontal*/
     scroll-behavior: smooth;
     flex-wrap: nowrap;
 }
@@ -708,15 +759,16 @@ button:hover {
     bottom: 5px;       
     width: 100%;        
     gap: 10px;   
+
+    .bar {
+        width: 18px;
+        height: 8px;
+        background-color: #333; 
+        border-radius: 2px; 
+        transition: background-color 0.3s ease;
+    }
 }
 
-.bar {
-    width: 18px;
-    height: 8px;
-    background-color: #333; 
-    border-radius: 2px; 
-    transition: background-color 0.3s ease;
-}
 
 .bar:hover {
     background-color: #555; 
