--- a/layout/buy-category.css
+++ b/layout/buy-category.css
@@ -55,6 +55,7 @@
     img {
         width: 100%;
         height: 100%;
+        cursor: pointer;
     }
 
     button {
@@ -75,6 +76,10 @@
     margin-top: 35px;
     margin-left: 10px;
     text-decoration: underline;
+
+    h3 {
+        cursor: pointer;
+    }
 }
 
 .brand_wrapper {
@@ -88,4 +93,5 @@
     filter: grayscale(1);
     transition: filter 0.3s;
     opacity: .6;
+    cursor: pointer;
 }
