--- a/layout/slider-hero.css
+++ b/layout/slider-hero.css
@@ -13,6 +13,7 @@
     background-position: center;
     opacity: 0;
     transition: opacity 1s ease-in-out;
+    cursor: pointer;
 }
 
 .slide.active {
