--- a/layout/banner-slider.css
+++ b/layout/banner-slider.css
@@ -8,9 +8,9 @@
 .slide {
     position: absolute;
     width: 100%;
-    height: 760px;
+    height: 500px;
     background-size: cover;
-    background-position: center;
+    background-position: right; /* mudar aqui*/
     opacity: 0;
     transition: opacity 1s ease-in-out;
     cursor: pointer;
@@ -69,11 +69,17 @@
 .logos {
     display: flex;
     justify-content: center;
-    gap: 20px;
     height: 70px;
+    
+    .logo_tatuape {
+        margin-right: 10px;
+    }
 
-    .logo_emporio {
-        width: 120px;
+    .separator {
+        width: 2px; 
+        background-color: black; 
+        height: 100%;  
+        margin: 0 15px; 
     }
 }
 
@@ -84,7 +90,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    bottom: 40%;
+    bottom: 30%;
     left: 5%;
 
     h2 {
