--- a/layout/header.css
+++ b/layout/header.css
@@ -7,14 +7,29 @@
 
     display: flex;
     justify-content: center;
-    padding: 0 40px;
+    padding: 50px 0px 20px 0px;
+    position: relative;
 
-    div {
-        padding: 16px 0;
+    .icon {
+        position: absolute;
+        top: 65%;
+        transform: translateY(-50%);
+        text-align: center;
+    }
+    .prev {
+        left: 5%;
+        font-size: 13px;
+        font-weight: bold;
+    }
+
+    .next {
+        right: 5%;
+        font-size: 13px;
+        font-weight: bold;
     }
 
     ul {
-        font-size: 13px;
+        font-size: 10px;
         display: flex;
         list-style: none;
         padding: 0;
@@ -26,16 +41,6 @@
         display: flex;
         align-items: center;
     }
-
-    span::after {
-        content: "|";
-        margin-left: 15px;
-        color: #4a4a4a;
-    }
-
-    li:last-child span::after {
-        content: "";
-    }
 }
 
 .header_content {
@@ -43,7 +48,7 @@
     .container {
         display: grid;
         grid-template-columns: 1fr 60px 1fr;
-        padding: 15px 40px;
+        padding: 15px 20px;
         position: relative;
         border-left: none;
         border-right: none;
@@ -51,28 +56,7 @@
         .logo {
             height: 60px;
             width: 54px;
-            cursor: pointer;
         }
-    }
-
-    /* Simulate a thinner border */
-    .container::before,
-    .container::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 0.5px;
-        background-color: #4a4a4a;
-    }
-
-    .container::before {
-        top: 0;
-    }
-
-    .container::after {
-        bottom: 0;
     }
 
     ul {
@@ -86,39 +70,54 @@
             height: 40px;
             width: 40px;
             padding: 10px;
-            cursor: pointer;
         }
     }
 
     .header_content_searchbar {
-
+        
         display: flex;
         align-items: center;
         overflow: hidden;
-        width: 320px;
+        width: 100%;
         position: relative;
+        max-width: 768px;
+
+        span {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #000000;
+            font-size: 16px;
+            font-weight: bold;
+        }
 
         input {
             width: 100%;
-            padding: 9px 12px;
             justify-content: space-between;
-            background-color: black;
-            border: 1px solid #4a4a4a;
-            font-size: 11px;
-            font-weight: bold;
-            text-transform: uppercase;
+            background-color: #f2f2f2;
+            border: none;
+            font-size: 15px;
+            font-weight: 500;
+            text-align: center;
             color: white;
             outline: none;
+            padding: 15px 10px;
         }
 
-        i {
+        img {
             position: absolute;
-            right: 10px;
+            right: 20px;
             top: 50%;
             transform: translateY(-50%);
             color: white;
             font-size: 14px;
-            cursor: pointer;
+            width: 20px;
+            height: 20px;
+        }
+
+        .search_icon{
+            background-image: url(../icons/search-icon.svg);
         }
     }
 
@@ -129,16 +128,17 @@
 }
 
 .header_nav-wrapper {
+    display: flex;
 
     nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 40px;
 
         a {
             display: flex;
             align-items: center;
+            justify-content: center;
             padding: 15px 0;
             text-decoration: none;
             color: white;
@@ -152,7 +152,7 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            width: 100%;
+            width: 70%;
             height: 2px;
             background-color: white;
             transform: scaleX(0);
@@ -168,6 +168,11 @@
             margin-left: 8px;
         }
     }
+
+    .like_container{
+        display: flex;
+        align-items: center;
+    }
 }
 
 .hamburger-menu {
@@ -175,13 +180,13 @@
     flex-direction: column;
     justify-content: space-between;
     padding-left: 5px;
-    width: 30px;
-    height: 8px;
-    cursor: pointer;
+    width: 60px;
+    height: 13px;
+    
 }
 
 .line {
-    height: 1px;
+    height: 2px;
     width: 50%;
     background-color: white;
     transition: transform 0.3s ease, opacity 0.3s ease;
@@ -191,6 +196,7 @@
     display: none;
     position: absolute;
     left: 0;
+    top: 80px;
     width: 100vw;
     background-color: #f2f2f2;
     padding: 10px 0;
@@ -203,7 +209,6 @@
     font-size: 14px;
     padding: 5px 50px;
     display: block;
-    cursor: pointer;
 }
 
 .dropdown:hover .content {
@@ -216,7 +221,7 @@
 
 .grid_container {
     display: grid;
-    grid-template-columns: repeat(6, minmax(100px, 1fr));
+    grid-template-columns: repeat(4, minmax(100px, 1fr));
     max-width: 70%;
     margin: 0 auto;
     padding: 50px 40px;
