--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @import './layout/reset.css';
 @import './layout/header.css';
-@import './layout/slider-hero.css';
+@import './layout/banner-slider.css';
 @import './layout/buy-category.css';
 @import './layout/sliders.css';
 @import './layout/ace-n-reviews.css';
