--- a/main.css
+++ b/main.css
@@ -5,3 +5,4 @@
 @import './layout/sliders.css';
 @import './layout/ace-n-reviews.css';
 @import './layout/footer.css';
+@import './layout/banners.css'
