--- a/layout/banner-slider.css
+++ b/layout/banner-slider.css
@@ -1,62 +1,28 @@
 .banner_slider {
     position: relative;
     width: 100%;
-    height: 760px;
+    height: 500px;
     overflow: hidden;
 }
 
 .slide {
     position: absolute;
-    width: 100%;
+    width: 400px;
     height: 500px;
-    background-size: cover;
-    background-position: right; /* mudar aqui*/
+    object-fit: cover; 
+    object-position: center;
     opacity: 0;
     transition: opacity 1s ease-in-out;
-    cursor: pointer;
 }
 
 .slide.active {
     opacity: 1;
 }
 
-.arrow {
-    position: absolute;
-    top: 90%;
-    border: none;
-    padding: 5px;
-    cursor: pointer;
-    background-size: contain;
-    transition: opacity 0.3s;
-    background-repeat: no-repeat;
-}
-
-.arrow.left {
-    left: 40%;
-    background-image: url(../icons/next-left.png);
-    background-position: center;
-}
-
-.arrow.right {
-    right: 40%;
-    background-image: url(../icons/next-right.png);
-    background-position: center;
-}
-
-.navigation {
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 20px;
-}
-
 .bar {
     width: 180px;
     height: 2px;
     background-image: url('../icons/barra-hero1.png');
-    cursor: pointer;
     opacity: 0.5;
     transition: opacity 0.3s;
 }
@@ -115,7 +81,6 @@
     font-weight: bold;
     background-image: url(../icons/botão-hero-1.png);
     border: none;
-    cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease;
 }
