--- a/layout/buy-category.css
+++ b/layout/buy-category.css
@@ -1,10 +1,10 @@
 .buy_category {
     width: 100%;
-    margin-left: 50px;
+    margin-left: 30px;
 
     h2 {
-        margin-top: 80px;
-        margin-bottom: 35px;
+        margin: 22px 0px;
+        font-size: 22px;
     }
 }
 
@@ -25,13 +25,13 @@
     }
 
     .category_arrow.left {
-        left: 75%;
+        left: 80%;
         background-image: url(../icons/arrow-left.png);
         background-position: center;
     }
 
     .category_arrow.right {
-        right: 20%;
+        right: 10%;
         background-image: url(../icons/arrow.png);
         background-position: center;
     }
@@ -39,17 +39,24 @@
 
 .buy_category_wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+    grid-auto-flow: column; 
+    grid-auto-columns: 470px; 
     gap: 45px;
     transition: transform 0.5s ease;
-    overflow: hidden;
     width: 100vw;
+    overflow-x: auto; 
+    scrollbar-width: none; 
+    -ms-overflow-style: none; 
+}
+
+.buy_category_wrapper::-webkit-scrollbar {
+    display: none; 
 }
 
 .buy_category_content_image {
     position: relative;
     height: 600px;
-    overflow: hidden;
+    width: 400px;
     z-index: 2;
 
     img {
@@ -63,17 +70,23 @@
         bottom: 0%;
         right: 0%;
         height: 50px;
-        padding: 10px 15px;
+        padding: 10px 20px;
+        border: none;
         color: white;
         font-weight: bold;
         background-color: black;
-        border: none;
         background: radial-gradient(at bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.801));
+        cursor: pointer;
+    }
+
+    button:hover {
+        color: black;
+        background: radial-gradient(at bottom, rgb(143, 139, 139), rgb(255, 255, 255));
     }
 }
 
 .buy_category_content_title {
-    margin-top: 35px;
+    margin-top: 15px;
     margin-left: 10px;
     text-decoration: underline;
 
@@ -85,8 +98,7 @@
 .brand_wrapper {
     display: flex;
     justify-content: center;
-    gap: 100px;
-    margin: 100px;
+    margin: 20px;
 }
 
 .brand_content img {
