--- a/layout/sliders.css
+++ b/layout/sliders.css
@@ -1,43 +1,18 @@
 .slider {
 
     position: relative;
-    padding-bottom: 55px;
-    margin-top: 55px;
+    padding-bottom: 38px;
+    margin-top: 20px;
 
     h2 {
-        padding-left: 40px;
+        padding-left: 30px;
+        font-size: 22px;
     }
-}
-
-.slider_arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #000;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 24px;
-    opacity: 0.7;
-    z-index: 10;
-}
-
-.left_arrow {
-    left: 10px;
-}
-
-.right_arrow {
-    right: 10px;
-}
-
-.slider_arrow:hover {
-    opacity: 1;
 }
 
 .slider_wrapper {
     display: flex;
-    padding-left: 40px;
+    padding-left: 30px;
     gap: 20px;
     overflow-x: auto;
     scroll-behavior: smooth;
@@ -54,7 +29,7 @@
 
 .product {
     position: relative;
-    width: 300px;
+    width: 260px;
     height: 400px;
     overflow: hidden;
 }
@@ -171,7 +146,7 @@
 }
 
 .green {
-    color: rgb(11, 206, 11);
+    color: #3fbd8c;
 }
 
 .pinkish {
