--- a/layout/banner-slider.css
+++ b/layout/banner-slider.css
@@ -1,16 +1,14 @@
 .banner_slider {
     position: relative;
     width: 100%;
-    height: 500px;
-    overflow: hidden;
+    height: 420px;
 }
 
 .slide {
     position: absolute;
-    width: 400px;
-    height: 500px;
-    object-fit: cover; 
-    object-position: center;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     opacity: 0;
     transition: opacity 1s ease-in-out;
 }
