--- a/layout/banners.css
+++ b/layout/banners.css
@@ -46,7 +46,7 @@
         button {
             height: 50px;
             width: 180px;
-            margin: 15px 0px 18px 0px;
+            margin: 18px 0px 0px 0px;
             color: white;
             font-weight: bold;
             background-image: url(../icons/botão-hero-1.png);
@@ -57,7 +57,7 @@
     }
 
     img {
-        width: 400px;
+        width: 100%;
         height: 380px;
         object-fit: cover; 
         object-position: center;
