--- a/layout/header.css
+++ b/layout/header.css
@@ -100,7 +100,7 @@
             font-size: 15px;
             font-weight: 500;
             text-align: center;
-            color: white;
+            color: black;
             outline: none;
             padding: 15px 10px;
         }
@@ -192,7 +192,7 @@
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-.dropdown .content {
+.dropdown_header .content {
     display: none;
     position: absolute;
     left: 0;
@@ -203,7 +203,7 @@
     z-index: 1;
 }
 
-.dropdown .content span {
+.dropdown_header .content span {
     color: black;
     text-decoration: none;
     font-size: 14px;
@@ -211,7 +211,7 @@
     display: block;
 }
 
-.dropdown:hover .content {
+.dropdown_header:hover .content {
     display: block;
     background-color: #f6f6f6;
     padding: 10px 0;
