--- a/layout/buy-category.css
+++ b/layout/buy-category.css
@@ -31,7 +31,7 @@
     }
 
     .category_arrow.right {
-        right: 10%;
+        right: 15%;
         background-image: url(../icons/arrow.png);
         background-position: center;
     }
@@ -42,6 +42,7 @@
     grid-auto-flow: column; 
     grid-auto-columns: 470px; 
     gap: 45px;
+    overflow-x: auto;
     transition: transform 0.5s ease;
     width: 100vw;
     overflow-x: auto; 
@@ -77,11 +78,6 @@
         background-color: black;
         background: radial-gradient(at bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.801));
         cursor: pointer;
-    }
-
-    button:hover {
-        color: black;
-        background: radial-gradient(at bottom, rgb(143, 139, 139), rgb(255, 255, 255));
     }
 }
 
