--- a/layout/reset.css
+++ b/layout/reset.css
@@ -9,3 +9,9 @@
 main {
     overflow-x: hidden;
 }
+
+.limit_container {
+    max-width: 1920px;   
+    width: 100%;         
+    margin: 0 auto;      
+}
