--- a/main.css
+++ b/main.css
@@ -4,4 +4,5 @@
 @import './layout/buy-category.css';
 @import './layout/sliders.css';
 @import './layout/ace-n-reviews.css';
+@import './layout/banners.css';
 @import './layout/footer.css';
