--- a/layout/reset.css
+++ b/layout/reset.css
@@ -8,5 +8,10 @@
 
 main {
     overflow-x: hidden;
+}
 
+.limit_container {
+    max-width: 480px;   
+    width: 100%;         
+    margin: 0 auto;      
 }
